WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194766
iOS Safari will not load USDZ in QLPreview when opening as BLOB
https://bugs.webkit.org/show_bug.cgi?id=194766
Summary
iOS Safari will not load USDZ in QLPreview when opening as BLOB
Dean Jackson
Reported
2019-02-17 13:36:07 PST
iOS Safari will not load USDZ in QLPreview when opening as BLOB
Attachments
Patch
(3.21 KB, patch)
2019-02-17 13:40 PST
,
Dean Jackson
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-02-17 13:36:35 PST
<
rdar://problem/42769186
>
Dean Jackson
Comment 2
2019-02-17 13:40:38 PST
Created
attachment 362248
[details]
Patch
Wenson Hsieh
Comment 3
2019-02-17 13:58:09 PST
Comment on
attachment 362248
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=362248&action=review
> Source/WebKit/UIProcess/Cocoa/SystemPreviewControllerCocoa.mm:100 > + completionHandler((NSURL*)strongSelf->_finishedURL, nil);
Nit - NSURL *
Dean Jackson
Comment 4
2019-02-18 11:10:02 PST
Committed
r241730
: <
https://trac.webkit.org/changeset/241730
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug